--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/mixin.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -92,7 +93,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/mixin.css"
             ],
             "scripts": []
           }
